# safegemini2api

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  start.bat  start.sh  stop.bat  stop.sh
backend/: config.py  main.py  start_a2a_agent.py
backend/middleware/: auth.py
backend/models/: schemas.py
backend/routers/: openai_compat.py
backend/services/: a2a_client.py  gemini_client.py  local_a2a_agent.py  prompt_builder.py
backend/tests/: test_config.py  test_gemini_client.py  test_local_a2a_agent.py  test_openai_compat.py  test_prompt_builder.py
docs/: gemini_cli_remote_subagents.md  local_a2a_agent.md
frontend/: index.html  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: styles.css
frontend/src/components/: AppNavigation.vue  ChatPanel.vue  ControlPanel.vue  MessageBubble.vue
frontend/src/composables/: useChat.js
frontend/src/views/: ExperienceView.vue  HomeView.vue  SettingsView.vue  StatusView.vue
src/: adapter-server.js  config.js  gemini-cli-client.js  index.js  openai.js  prompt.js
test/: adapter-server.test.js  config.test.js  gemini-cli-client.test.js  prompt.test.js
ui/: app.js  index.html  styles.css
